<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/default_margin"
    android:layout_height="match_parent"
    tools:context="com.dstudio.janwelocampo.mvparchitecture.ui.detail.DetailActivity"
    android:orientation="vertical">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:id="@+id/text_city"
        android:gravity="center"
        android:textSize="@dimen/text_size_large"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"

        android:padding="@dimen/default_margin">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/image_weather"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_medium"
            android:id="@+id/text_weather_desc"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/label_wind"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/text_wind"
            android:textSize="@dimen/text_size_medium"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="@dimen/min_margin">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/label_humidity"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/text_humidity"
            android:textSize="@dimen/text_size_medium"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="@dimen/min_margin">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/label_max_temp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/text_max_temp"
            android:textSize="@dimen/text_size_medium"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="@dimen/min_margin">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/label_min_temp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/text_min_temp"
            android:textSize="@dimen/text_size_medium"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="@dimen/min_margin">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/label_sunrise"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/text_sunrise"
            android:textSize="@dimen/text_size_medium"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="@dimen/min_margin">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/label_sunset"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/text_sunset"
            android:textSize="@dimen/text_size_medium"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
